# jgioia_panda_projects

./: CMakeLists.txt  frames.gv  package.xml  pandaproblems.txt  readme.md  setup.cfg
bash/: control.bash  moveit.bash  rviz.bash  setup.bash
config/: default.rviz  panda_control.yaml
csv/: ex1.csv  ex2.csv
launch/: ar_track_markers.launch  box.launch  default.rviz  demo_april_tag.launch  demo_gazebo_manipulation.launch  display.launch  empty_world.launch  image_processing.launch  move_group.launch  moveit_rviz.launch  panda.launch  panda_moveit.launch  panda_table.launch  panda_table_camera.launch  planning_context.launch  rs_d435_camera_with_model.launch  simulation.launch  table.launch  tutorial.launch
launch/archive/: notes.txt  old_demo_april_tag.launch  old_demo_gazebo_manipulation.launch  old_panda_table.launch  old_simulation.launch
models/: box.xacro  box_purple.xacro  box_yellow.xacro  panda.srdf.xacro  panda.urdf  panda_table.srdf.xacro  panda_table.urdf  panda_table_camera.urdf  table.urdf  table.xacro
models/franka_description/: hand.xacro  panda.gazebo.xacro  panda_arm.urdf.xacro  panda_arm_hand.urdf.xacro
notes/: 9 17 21.txt  pandaproblems.txt
proto/: createMessage.py  demo2.txt  message1.txt  movement.proto  movement_pb2.py
rviz/: default.rviz
scripts/: ar_object_importer.py  createMessage.py  create_message.py  demo_april_tag.py  demo_gazebo_manipulation.py  demo_movement.py  demo_pick_and_place.py  depth_sensor_interface.py  gazebo_object_importer.py  link_pose_interface.py  move_group_interface.py  move_group_python_interface_tutorial.py  moveit_object.py  moveit_object_publisher.py  movement_pb2.py  parse_operations.py  parse_poses.py  stop_demo.py  testing.py
urdf/: tutorial1.urdf
