<?xml version="1.0"?>
<package format="2">
  <name>jgioia_panda_projects</name>
  <version>0.0.0</version>
  <description>My beginner level projects for the Panda robot</description>
  <maintainer email="jeg4@rice.edu">Joseph Gioia</maintainer>
  <license>BSD</license>
  <author email="jeg4@rice.edu">Joseph Gioia</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslaunch</build_depend>

  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>protobuf</exec_depend>
  <exec_depend>moveit_resources</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>panda_simulation</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>